Documentation content updates (#200)
* move front matter guide to the site

* dep upgrades

* new quickstart

* rename asset

* rename shell guide

* set up correct index pages

* simplify provider guides

* move provide protocol reference

* set up the correct provider protocol guides

* annotations

* quickstart updates

* add faq page

* snippets

* sidebar updates and add pagefind to include reference

* update urls to remove whitespace

* providers index page

* simplify config

* don't index api reference page (not ideal for consumption)

* remove old pagerduty guide pending updates

* set up correct webhook guides

* template guide updates

* sidebar

* format the jsonnet correctly

* add mermaid deps

* render mermaid diagrams inside of code blocks

* remove template

* update index page

* move the internal documentation where it belongs

* remove Development sidebar

* generate templates reference automatically from the libsonnet in the docs site itself

* remove in-source documentation

* formatting

* a few more renames and simplification

* update yarn lock

--- a/docs/src/content/docs/docs/index.mdx
+++ b/docs/src/content/docs/docs/index.mdx
@@ -1,19 +1,16 @@
 ---
 title: Fiberplane Docs
-description: Capture, triage, improve your incident workflows
+description: Build data-rich incident workflows
 template: splash
 hero:
-  tagline: Capture, triage, improve your incident workflows
-
+  tagline: Build data-rich incident workflows
 ---
 
 import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
 
-## Next steps
-
 <CardGrid>
-	<LinkCard title="Get started" href="/docs/quickstart" description="A quickstart tour of Fiberplane"></LinkCard>
+	<LinkCard title="Get started" href="/docs/quickstart" description="Get up and going with Fiberplane"></LinkCard>
 	<LinkCard title="Set up Templates" href="/docs/templates" description="A guide how to set Fiberplane Templates up with your Git workflows"></LinkCard>
 	<LinkCard title="Connect your Providers" href="/docs/providers" description="A guide how to connect Fiberplane Providers with your observability tools"></LinkCard>
-    <LinkCard title="Explore API" href="/docs/reference/api" description="Build other automations with Fiberplane API"></LinkCard>
+    <LinkCard title="Set up Webhooks" href="/docs/webhooks" description="Build other automations with Fiberplane API"></LinkCard>
 </CardGrid>
